[package]
name = "Glide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.10"
imap = "3.0.0-alpha.7"
threadpool = "1.8.1"
sinner = "0.1.2"
colored = "2.0.0"
tokio = { version = "1.19.2", features = ["full"] }